Fix perfect scrollbar bug

--- a/assets/stylesheet/formView.less
+++ b/assets/stylesheet/formView.less
@@ -55,15 +55,15 @@
         padding-left  : 40px !important;
         h1 {
             .exo;
-            width           : 100%;
-            background      : @backgroundColor;
-            font-size       : 35px;
-            color           : #fff;
-            border-bottom   : 1px #555 solid;
+            width          : 100%;
+            background     : @backgroundColor;
+            font-size      : 35px;
+            color          : #fff;
+            border-bottom  : 1px #555 solid;
 
-            padding-bottom: 15px;
-            overflow: hidden;
-            margin-bottom: 0;
+            padding-bottom : 15px;
+            overflow       : hidden;
+            margin-bottom  : 0;
             &:focus { box-shadow: none; }
         }
 
@@ -83,14 +83,16 @@
             height: 100%;
         }
         #scrollSection {
-            height: 100%;
-            position: relative;
-            overflow: hidden;
+            height   : 100%;
+            position : relative;
+            overflow : hidden;
         }
         .ps-scrollbar-y-rail {
             background : black;
-            height: 580px !important;
+            height     : 550px !important;
+            overflow   : hidden;
         }
+
     }
 
     .drop {
@@ -290,7 +292,7 @@
 
         .radioField, .checkboxField {
             label {
-                color : #111;
+                color : #888;
             }
         }
 
